feat(security): 更新Sa-Token配置并重构ID生成机制
- 将Sa-Token的token-name从tikToken改为Authorization
- 为Sa-Token配置添加Bearer前缀支持
- 移除DefaultDBFieldHandler中的ID生成逻辑
- 新增MyBatis ID自动生成拦截器实现工业级号段模式
- 重构IdUtils为号段模式，支持高并发零IO阻塞
- 添加IdSegment实体类支撑双号段无阻塞生成
- 优化分布式ID生成器，支持Redis+DB双容错机制
- 从TenantPackageDO中移除@TableField(fill = FieldFill.INSERT)注解