@@ -1,308 +1,372 @@
 package me.link.bootstrap.util;
 
-import cn.hutool.core.util.IdUtil;
-import com.alibaba.ttl.threadpool.TtlExecutors;
+import cn.hutool.core.util.StrUtil;
 import jakarta.annotation.PostConstruct;
+import jakarta.annotation.PreDestroy;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
-import me.link.bootstrap.core.exception.GlobalException;
+import me.link.bootstrap.core.idgen.IdSegment;
 import me.link.bootstrap.system.dal.mapper.SequenceMapper;
 import org.redisson.api.RAtomicLong;
+import org.redisson.api.RLock;
 import org.redisson.api.RedissonClient;
 import org.springframework.stereotype.Component;
 
-import java.time.LocalDate;
 import java.time.LocalDateTime;
-import java.time.LocalTime;
-import java.time.ZoneId;
 import java.time.format.DateTimeFormatter;
-import java.util.concurrent.CompletableFuture;
-import java.util.concurrent.ExecutorService;
-import java.util.concurrent.LinkedBlockingQueue;
-import java.util.concurrent.ThreadPoolExecutor;
-import java.util.concurrent.TimeUnit;
+import java.util.Map;
+import java.util.concurrent.*;
 
 /**
- * 分布式 ID 生成工具类，继承自 Hutool 的 IdUtil。
- * <p>
- * 该类利用 Redis (Redisson) 实现全局唯一且有序的序列号生成，支持按天重置序列或全局累加模式。
- * 生成的 ID 格式为：前缀 + 日期 (可选) + 指定位数的自增序列。
- * </p>
- * <p>
- * 核心特性：
- * 1. 高并发支持：基于 Redis 原子操作 guarantee 线程安全。
- * 2. 灵活策略：支持每日重置（含日期）或全局递增（不含日期）。
- * 3. 自动过期：按天模式下，计数器会在次日自动过期，节省内存。
- * 4. 降级容错：当 Redis 不可用时，自动降级至数据库序列表，最终保底使用时间戳。
- * </p>
- *
- * @author link
+ * 分布式ID生成器 - 工业级号段模式
+ * 特性：高并发、零IO阻塞、Redis+DB双容错、内存泄露防护
  */
 @Component
 @RequiredArgsConstructor
 @Slf4j
-public class IdUtils extends IdUtil {
+public class IdUtils {
 
-    /**
-     * Redisson 客户端实例，用于操作分布式原子长整型计数器。
-     * 通过构造函数注入，确保在 Spring 容器管理下可用。
-     */
-    private final RedissonClient redissonClient;
-
-    /**
-     * SequenceMapper 实例，用于数据库操作。
-     * 作为 Redis 故障时的降级存储方案。
-     */
-    private final SequenceMapper sequenceMapper;
-
-    /**
-     * 日期格式化器，用于生成包含秒级精度的日期字符串 (yyyyMMddHHmmss)。
-     * 主要用于构建高精度的 Redis Key，防止同一秒内的并发冲突（虽然原子操作已保证，但有助于调试和区分）。
-     */
+    private static final long DEFAULT_STEP = 1000;
+    private static final String BASE_PREFIX = "id_gen:segment:";
     private static final DateTimeFormatter DATE_SEQ_FORMATTER = DateTimeFormatter.ofPattern("yyyyMMddHHmmss");
-
-    /**
-     * 日期格式化器，用于生成业务可见的日期字符串 (yyyyMMdd)。
-     * 当开启按天重置模式时，此日期将嵌入到最终生成的 ID 中。
-     */
     private static final DateTimeFormatter DATE_FORMATTER = DateTimeFormatter.ofPattern("yyyyMMdd");
 
-    /**
-     * Redis Key 的基础前缀。
-     * 所有生成的计数器 Key 都将以此开头，便于管理和监控。
-     */
-    private static final String BASE_PREFIX = "id_gen:";
+    private final RedissonClient redissonClient;
+    private final SequenceMapper sequenceMapper;
 
-    /**
-     * 静态实例引用。
-     * 由于 Spring 管理的 Bean 是实例变量，而对外提供的工具方法通常是静态的，
-     * 因此需要通过此静态变量桥接，以便在静态方法中调用实例方法。
-     */
-    private static volatile IdUtils instance;
+    private static IdUtils instance;
+    private final Map<String, IdSegment> segmentCache = new ConcurrentHashMap<>();
 
-    /**
-     * 用于异步同步序列值到数据库的线程池。
-     * 使用有界队列和固定线程数，避免高并发下资源耗尽。
-     */
-    private static final ExecutorService SYNC_EXECUTOR = TtlExecutors.getTtlExecutorService(new ThreadPoolExecutor(
-            2,
-            4,
-            60L,
-            TimeUnit.SECONDS,
-            new LinkedBlockingQueue<>(1000),
+    // 专门用于异步加载号段的线程池
+    private final ExecutorService loaderExecutor = new ThreadPoolExecutor(
+            2, 4, 60L, TimeUnit.SECONDS,
+            new LinkedBlockingQueue<>(200),
             new ThreadPoolExecutor.CallerRunsPolicy()
-    ));
+    );
 
     /**
-     * Spring 容器启动后的初始化钩子。
-     * 在 Bean 实例化完成后，将当前实例赋值给静态变量，使静态方法可用。
+     * 初始化方法 - Spring容器启动时自动调用
+     * 将当前实例赋值给静态变量，使静态方法能够访问Spring管理的Bean
      */
     @PostConstruct
     public void init() {
         instance = this;
+        log.info("[IdUtils] 分布式ID生成器初始化完成 | RedissonClient={}, SequenceMapper={}", 
+                redissonClient != null ? "已注入" : "未注入", 
+                sequenceMapper != null ? "已注入" : "未注入");
     }
 
     /**
-     * 获取下一个分布式唯一 ID 的静态入口方法。
+     * 销毁方法 - Spring容器关闭时自动调用
+     * 优雅关闭异步加载线程池，防止资源泄露
+     */
+    @PreDestroy
+    public void destroy() {
+        log.info("[IdUtils] 开始销毁分布式ID生成器 | 缓存号段数量={}", segmentCache.size());
+        loaderExecutor.shutdown();
+        try {
+            if (!loaderExecutor.awaitTermination(5, TimeUnit.SECONDS)) {
+                loaderExecutor.shutdownNow();
+                log.warn("[IdUtils] 强制关闭异步加载线程池");
+            }
+        } catch (InterruptedException e) {
+            loaderExecutor.shutdownNow();
+            Thread.currentThread().interrupt();
+        }
+        log.info("[IdUtils] 分布式ID生成器销毁完成");
+    }
+
+    /**
+     * 获取分布式唯一ID（静态入口方法）
      * <p>
-     * 该方法供外部业务直接调用，内部委托给实例方法处理具体逻辑。
+     * 支持两种ID格式：
+     * 1. 按天重置：{prefix}{yyyyMMddHHmmss}{sequence} 例如：ORD20260409153045000001
+     * 2. 全局递增：{prefix}{sequence} 例如：ORD000001
      * </p>
      *
-     * @param prefix  ID 的前缀标识，用于区分不同业务类型（如 "ORDER", "USER"）。
-     * @param digit   自增序列号的位数（不足部分左侧补零）。例如 5 表示生成 "00001"。
-     * @param isDaily 是否按天重置序列号。
-     *                - true: 每天从 1 开始计数，生成的 ID 包含日期字符串 (yyyyMMdd)。
-     *                - false: 全局累加计数，生成的 ID 不包含日期字符串，序列号永不自减。
-     * @return 生成的唯一 ID 字符串。
-     * @throws IllegalStateException 如果 Spring 容器尚未完成初始化，instance 为 null 时抛出。
+     * @param prefix  业务前缀，用于区分不同业务场景（如：ORD-订单、USER-用户）
+     * @param digit   序列号位数，不足左侧补0（建议6-8位）
+     * @param isDaily 是否按天重置计数
+     *                - true: 每天从0开始计数，ID包含日期信息
+     *                - false: 全局连续递增，ID不包含日期
+     * @return 生成的分布式唯一ID
+     * @throws IllegalStateException 如果IdUtils未正确初始化
      */
     public static String getNextId(String prefix, int digit, boolean isDaily) {
         if (instance == null) {
-            throw new IllegalStateException("IdUtils 尚未初始化，请确保 Spring 容器已启动。");
+            log.error("[IdUtils] IdUtils未初始化，无法生成ID | prefix={}, digit={}, isDaily={}", prefix, digit, isDaily);
+            throw new IllegalStateException("IdUtils未初始化");
         }
-        return instance.nextId(prefix, digit, isDaily);
+        return instance.generateId(prefix, digit, isDaily);
     }
 
     /**
-     * 内部记录类，用于封装生成分布式序列所需的上下文信息。
+     * 核心ID生成逻辑（实例方法）
      * <p>
-     * 使用 record 可以自动生成构造函数、getter 等方法，使代码更简洁。
+     * 生成流程：
+     * 1. 构建业务标识（bizName），区分按天和不按天的场景
+     * 2. 获取或更新内存中的可用号段
+     * 3. 异步预加载下一号段（无阻塞优化）
+     * 4. 原子自增获取序列值
+     * 5. 容错检查：如果号段耗尽则递归重试
+     * 6. 清理过期的内存号段（防止内存泄露）
+     * 7. 格式化组装最终ID
      * </p>
      *
-     * @param key          Redis 中的完整 Key，用于存储当前业务的计数器。
-     * @param bizName      业务标识名，用于数据库查询时的唯一键。
-     * @param shouldExpire 标记该计数器是否需要设置过期时间（仅当 isDaily 为 true 时需要）。
+     * @param prefix  业务前缀
+     * @param digit   序列号位数
+     * @param isDaily 是否按天重置
+     * @return 生成的ID字符串
      */
-    private record IdContext(String key, String bizName, boolean shouldExpire) {
-    }
-
-    /**
-     * 核心方法：生成下一个分布式唯一 ID。
-     * <p>
-     * 逻辑流程：
-     * 1. 获取当前时间，格式化出用于构建 Key 的高精度日期串和用于结果展示的日期串。
-     * 2. 根据 isDaily 参数决定业务名称（bizName）和 Redis Key 的结构。
-     * 3. 构建上下文对象 (IdContext)。
-     * 4. 调用 getSequence 获取自增序列号（优先 Redis，失败则降级 DB）。
-     * 5. 将前缀、日期（可选）和格式化后的序列号拼接成最终结果返回。
-     * </p>
-     *
-     * @param prefix  ID 前缀。
-     * @param digit   序列号位数。
-     * @param isDaily 是否按天重置。
-     * @return 格式化后的唯一 ID 字符串。
-     */
-    public String nextId(String prefix, int digit, boolean isDaily) {
-        // 获取当前时间，统一格式化
+    private String generateId(String prefix, int digit, boolean isDaily) {
         LocalDateTime now = LocalDateTime.now();
-        // dateStrSeq: 用于构建唯一的 Redis Key，精确到秒，减少极端并发下的哈希冲突概率
-        String dateStrSeq = now.format(DATE_SEQ_FORMATTER);
-        // dateStr: 用于最终 ID 展示，精确到天
-        String dateStr = now.format(DATE_FORMATTER);
+        String todayStr = now.format(DATE_FORMATTER);
+        // 构建业务标识：按天场景附加日期后缀，实现每日独立计数
+        String bizName = isDaily ? prefix + ":" + todayStr : prefix;
 
-        // 业务标识名，用于数据库查询
-        // 按天模式：业务名包含日期，确保数据库中不同天的记录隔离（如果需要持久化每天的最大值）
-        // 全局模式：业务名仅为前缀
-        String bizName = isDaily ? prefix + ":" + dateStr : prefix;
+        log.debug("[IdUtils] 开始生成ID | prefix={}, bizName={}, digit={}, isDaily={}", 
+                prefix, bizName, digit, isDaily);
 
-        // 1. 构建上下文：决定 Redis Key 的结构以及是否需要过期策略
-        var ctx = isDaily
-                // 按天模式：Key 包含前缀和精确时间，设置过期标志为 true
-                ? new IdContext("%s%s:%s".formatted(BASE_PREFIX, prefix, dateStr), bizName, true)
-                // 全局模式：Key 包含前缀和 "global" 后缀，不过期
-                : new IdContext("%s%s:global".formatted(BASE_PREFIX, prefix), bizName, false);
+        // 步骤1：获取可用号段（可能触发同步加载）
+        IdSegment segment = getOrUpdateSegment(bizName);
+        log.debug("[IdUtils] 获取号段成功 | bizName={}, currentValue={}, maxId={}, remaining={}", 
+                bizName, segment.getCurrentValue().get(), segment.getMaxId(), 
+                segment.getMaxId() - segment.getCurrentValue().get());
 
-        // 2. 获取自增序列号（包含降级逻辑）
-        long sequence = getSequence(ctx);
+        // 步骤2：异步检测并预加载下一号段（核心优化：避免号段耗尽时的阻塞）
+        checkAndAsyncLoadNext(segment);
 
-        // 3. 格式化输出：构建指定位数的数字字符串（例如 %05d）
-        // 如果 digit <= 0，则不补零，直接输出数字
-        String suffix = (digit > 0) ? "%0" + digit + "d" : "%d";
+        // 步骤3：原子自增获取序列值（无锁高性能）
+        long seq = segment.getAndIncrement();
 
-        // 拼接最终结果
-        return isDaily
-                ? "%s%s%s".formatted(prefix, dateStrSeq, suffix.formatted(sequence))
-                : "%s%s".formatted(prefix, suffix.formatted(sequence));
+        // 步骤4：容错检查 - 极端并发情况下可能击穿号段，执行递归重试
+        if (seq > segment.getMaxId()) {
+            log.warn("[IdUtils] 号段被击穿，执行降级重试 | bizName={}, seq={}, maxId={}", 
+                    bizName, seq, segment.getMaxId());
+            return generateId(prefix, digit, isDaily);
+        }
+
+        // 步骤5：定时清理过期内存Key（防止内存泄露）
+        cleanExpiredSegments(todayStr);
+
+        // 步骤6：格式化组装ID
+        String suffix = String.format("%0" + digit + "d", seq);
+        String generatedId = isDaily ? prefix + now.format(DATE_SEQ_FORMATTER) + suffix : prefix + suffix;
+        
+        log.debug("[IdUtils] ID生成成功 | generatedId={}, seq={}, bizName={}", generatedId, seq, bizName);
+        return generatedId;
     }
 
     /**
-     * 从 Redis 获取并递增序列号，同时处理按天模式的过期设置。
+     * 获取或更新内存中的号段
      * <p>
-     * 此方法是高性能路径，优先使用 Redis 原子操作。
+     * 检查缓存中是否存在可用号段，如果不存在或已耗尽则触发同步加载
      * </p>
      *
-     * @param ctx 上下文对象，包含 Redis Key 和过期标志。
-     * @return 递增后的序列号。
+     * @param bizName 业务标识
+     * @return 可用的号段对象
      */
-    private long getSequence(IdContext ctx) {
-        try {
-            // 获取 Redis 原子长整型对象
-            RAtomicLong atomicLong = redissonClient.getAtomicLong(ctx.key());
+    private IdSegment getOrUpdateSegment(String bizName) {
+        IdSegment segment = segmentCache.get(bizName);
+        if (segment == null || segment.isExhausted()) {
+            log.debug("[IdUtils] 号段不存在或已耗尽，触发同步加载 | bizName={}, exhausted={}", 
+                    bizName, segment != null && segment.isExhausted());
+            return synchronizedLoad(bizName);
+        }
+        return segment;
+    }
 
-            // 1. 核心改进：检查 Key 是否存在，若不存在（可能被删或过期），执行初始化
+    /**
+     * 同步加载新号段（双重检查锁定模式）
+     * <p>
+     * 加载流程：
+     * 1. 获取分布式锁，确保多节点间号段分配的原子性
+     * 2. 二次检查缓存，避免重复加载
+     * 3. 从Redis原子递增获取新号段范围
+     * 4. 异步同步到数据库（最终一致性）
+     * 5. 更新内存缓存
+     * </p>
+     * <p>
+     * 容灾策略：
+     * - Redis异常时降级为DB直接分配（性能降低但保证可用性）
+     * - 分布式锁超时时间3秒，持锁时间10秒
+     * </p>
+     *
+     * @param bizName 业务标识
+     * @return 新加载的号段
+     */
+    private IdSegment synchronizedLoad(String bizName) {
+        String lockKey = BASE_PREFIX + bizName + ":lock";
+        RLock lock = redissonClient.getLock(lockKey);
+        try {
+            // 尝试获取分布式锁：等待3秒，持锁10秒
+            boolean locked = lock.tryLock(3, 10, TimeUnit.SECONDS);
+            if (!locked) {
+                log.warn("[IdUtils] 获取分布式锁超时，执行DB降级 | bizName={}, lockKey={}", bizName, lockKey);
+                return dbFallback(bizName);
+            }
+
+            log.debug("[IdUtils] 获取分布式锁成功，开始加载号段 | bizName={}", bizName);
+
+            // 双重检查：获取锁后再次验证缓存，避免重复加载
+            IdSegment current = segmentCache.get(bizName);
+            if (current != null && !current.isExhausted()) {
+                log.debug("[IdUtils] 双重检查发现号段已加载，直接返回 | bizName={}", bizName);
+                return current;
+            }
+
+            // 从Redis提取新号段：原子递增获取号段结束值
+            String redisKey = BASE_PREFIX + bizName;
+            RAtomicLong atomicLong = redissonClient.getAtomicLong(redisKey);
+            
+            // 如果Redis中不存在该key，从数据库读取当前最大值进行初始化
             if (!atomicLong.isExists()) {
-                checkSequence(ctx, atomicLong);
+                Long dbMax = sequenceMapper.getCurrentValue(bizName);
+                long initValue = dbMax == null ? 0 : dbMax;
+                atomicLong.set(initValue);
+                log.info("[IdUtils] Redis号段初始化 | bizName={}, dbMax={}, initValue={}", 
+                        bizName, dbMax, initValue);
             }
 
-            // 执行原子自增操作，返回自增后的值
-            long sequence = atomicLong.incrementAndGet();
+            // 原子递增：一次性获取整个号段的结束值
+            long endId = atomicLong.addAndGet(DEFAULT_STEP);
+            long startId = endId - DEFAULT_STEP + 1;
+            
+            log.info("[IdUtils] 从Redis分配新号段 | bizName={}, startId={}, endId={}, step={}", 
+                    bizName, startId, endId, DEFAULT_STEP);
 
-            // 4. 使用 Instant 进行精确过期设置
-            // 仅在序列号为 1（即当天的第一个请求/新创建的 Key）且需要过期时设置过期时间
-            // 这样可以避免每次请求都去计算和设置过期时间，提升性能
-            if (sequence == 1 && ctx.shouldExpire()) {
-                if (atomicLong.remainTimeToLive() < 0) {
-                    var endOfDay = LocalDateTime.of(LocalDate.now(), LocalTime.MAX)
-                            .atZone(ZoneId.systemDefault()).toInstant();
-                    atomicLong.expire(endOfDay);
-                }
-            }
-
-            // 2. 异步同步
-            CompletableFuture.runAsync(() -> {
+            // 异步同步到数据库，确保最终一致性（不阻塞主流程）
+            loaderExecutor.execute(() -> {
                 try {
-                    sequenceMapper.syncRedisCurrentValue(ctx.bizName(), sequence);
+                    int affectedRows = sequenceMapper.syncRedisCurrentValue(bizName, endId);
+                    log.debug("[IdUtils] 号段异步同步到DB成功 | bizName={}, endId={}, affectedRows={}", 
+                            bizName, endId, affectedRows);
                 } catch (Exception e) {
-                    log.warn("ID 异步同步失败（非致命）: {}", e.getMessage());
+                    log.error("[IdUtils] 号段异步同步到DB失败 | bizName={}, endId={}", bizName, endId, e);
                 }
-            }, SYNC_EXECUTOR);
-            return sequence;
+            });
+
+            // 创建新号段并放入缓存
+            IdSegment newSegment = new IdSegment(startId, DEFAULT_STEP, bizName);
+            segmentCache.put(bizName, newSegment);
+            log.debug("[IdUtils] 号段加载完成并缓存 | bizName={}, cacheSize={}", 
+                    bizName, segmentCache.size());
+            return newSegment;
+            
+        } catch (InterruptedException e) {
+            log.error("[IdUtils] 获取分布式锁被中断 | bizName={}", bizName, e);
+            Thread.currentThread().interrupt();
+            return dbFallback(bizName);
         } catch (Exception e) {
-            // 捕获其他未预期的异常，同样触发降级
-            log.error("Redis 操作发生未知异常，降级至数据库序列：{}", e.getMessage(), e);
-            return getSequence(ctx.bizName());
+            log.error("[IdUtils] 号段加载失败，执行DB降级 | bizName={}, error={}", 
+                    bizName, e.getMessage(), e);
+        } finally {
+            // 释放分布式锁
+            if (lock.isHeldByCurrentThread()) {
+                lock.unlock();
+                log.debug("[IdUtils] 释放分布式锁 | bizName={}", bizName);
+            }
         }
+        
+        // 降级方案：直接从数据库分配
+        return dbFallback(bizName);
     }
 
     /**
-     * 降级方法：当 Redis 不可用时，从数据库获取序列号。
+     * 检查并异步加载下一号段（无阻塞预加载机制）
      * <p>
-     * 逻辑：
-     * 1. 生成一个雪花算法 ID 作为基准（或直接使用当前时间戳）。
-     * 2. 调用 Mapper 更新数据库中的最大值（upsert 并 increment）。
-     * 3. 查询当前的最新值返回。
-     * 4. 如果数据库也失败，则返回基于时间戳的简单保底值。
+     * 当号段使用达到阈值（剩余量 < 20%）时，提前异步加载下一号段，
+     * 避免号段耗尽时的同步等待，实现零IO阻塞的高性能ID生成。
      * </p>
-     * <b>注意</b>：此方法的并发性能和唯一性保证弱于 Redis 方案，仅作为故障转移手段。
-     *
-     * @param bizName 业务标识名，对应数据库中的业务键。
-     * @return 序列号。
-     */
-    private long getSequence(String bizName) {
-        try {
-            // 先进行原子操作进行数据更新获取最大序列号
-            // upsertAndIncrement 应该保证在数据库层面的原子性（如使用 ON DUPLICATE KEY UPDATE 或 锁）
-            sequenceMapper.insertOrUpdateAndIncrement(bizName);
-
-            // 返回更新后的当前值
-            return sequenceMapper.getCurrentValue(bizName);
-        } catch (Exception ex) {
-            // 捕获其他数据库异常
-            log.error("数据库操作发生未知异常，使用时间戳最后保底！", ex);
-            return System.currentTimeMillis() % 1000000;
-        }
-    }
-
-    /**
-     * 检查并初始化Redis序列计数器
      * <p>
-     * 当Redis中的序列计数器不存在时，通过分布式锁保证线程安全地从数据库恢复序列值。
-     * 采用双重检查机制，避免高并发场景下多个请求同时查询数据库并重置Redis序列。
+     * 使用本地锁防止单机内重复提交异步任务
+     * </p>
      *
-     * @param ctx        ID上下文对象，包含业务名称等信息
-     * @param atomicLong Redis原子长整型计数器，用于存储和更新序列值
+     * @param segment 当前使用的号段
      */
-    private void checkSequence(IdContext ctx, RAtomicLong atomicLong) {
-        // 使用分布式锁防止高并发下多个请求同时查询 DB 并重置 Redis
-        String lockKey = ctx.key() + ":lock";
-        var lock = redissonClient.getLock(lockKey);
-        boolean lockAcquired = false;
-        try {
-            // 等待锁 3秒，持有锁 10秒
-            lockAcquired = lock.tryLock(3, 10, java.util.concurrent.TimeUnit.SECONDS);
-            if (lockAcquired) {
-                // Double Check: 拿到锁后再查一遍 Key 是否存在
-                if (!atomicLong.isExists()) {
-                    Long dbValue = sequenceMapper.getCurrentValue(ctx.bizName());
-                    // 如果 DB 有值，则以 DB 为准；若无，则从 0 开始
-                    long startValue = (dbValue != null) ? dbValue : 0L;
-                    atomicLong.set(startValue);
-                    log.info("业务 {} Redis 序列初始化完成，起始值: {}", ctx.bizName(), startValue);
-                }
-            } else {
-                // 未获取到锁，短暂等待后再次检查（其他线程可能已初始化完成）
-                Thread.sleep(100);
-                if (!atomicLong.isExists()) {
-                    log.warn("业务 {} 获取分布式锁超时，Redis 序列仍未初始化，将从 0 开始", ctx.bizName());
-                    atomicLong.set(0L);
+    private void checkAndAsyncLoadNext(IdSegment segment) {
+        // 检查是否达到预加载阈值（剩余量 < 20%）且没有正在进行的加载任务
+        if (segment.isThresholdReached() && !segment.isLoading()) {
+            log.debug("[IdUtils] 号段达到预加载阈值，触发异步加载 | bizName={}, currentValue={}, maxId={}, threshold=20%", 
+                    segment.getBizName(), segment.getCurrentValue().get(), segment.getMaxId());
+            
+            // 本地锁防止单机内重复提交异步任务
+            synchronized (segment) {
+                if (!segment.isLoading()) {
+                    segment.setLoading(true);
+                    log.debug("[IdUtils] 提交异步加载任务 | bizName={}", segment.getBizName());
+                    
+                    loaderExecutor.execute(() -> {
+                        try {
+                            log.debug("[IdUtils] 开始异步加载下一号段 | bizName={}", segment.getBizName());
+                            synchronizedLoad(segment.getBizName());
+                            log.debug("[IdUtils] 异步加载下一号段完成 | bizName={}", segment.getBizName());
+                        } catch (Exception e) {
+                            log.error("[IdUtils] 异步加载下一号段失败 | bizName={}", segment.getBizName(), e);
+                        } finally {
+                            segment.setLoading(false);
+                            log.debug("[IdUtils] 重置加载标志 | bizName={}", segment.getBizName());
+                        }
+                    });
                 }
             }
-        } catch (InterruptedException e) {
-            Thread.currentThread().interrupt();
-            log.error("业务 {} 获取分布式锁被中断", ctx.bizName(), e);
-        } finally {
-            if (lockAcquired && lock.isHeldByCurrentThread()) {
-                lock.unlock();
+        }
+    }
+
+    /**
+     * 数据库降级方案
+     * <p>
+     * 当Redis不可用或分布式锁获取失败时，直接通过数据库分配ID。
+     * 性能较低（每次都需要DB IO），但保证了系统的可用性。
+     * </p>
+     * <p>
+     * 注意：此方法每次只分配1个ID，适用于低频场景或紧急降级
+     * </p>
+     *
+     * @param bizName 业务标识
+     * @return 单ID号段（step=1）
+     */
+    private IdSegment dbFallback(String bizName) {
+        log.warn("[IdUtils] 执行DB降级分配ID | bizName={}", bizName);
+        try {
+            // 数据库原子递增
+            int affectedRows = sequenceMapper.insertOrUpdateAndIncrement(bizName);
+            long val = sequenceMapper.getCurrentValue(bizName);
+            
+            log.warn("[IdUtils] DB降级分配成功 | bizName={}, currentValue={}, affectedRows={} | 警告：性能较低，建议检查Redis状态", 
+                    bizName, val, affectedRows);
+            
+            // 返回单ID号段（step=1）
+            return new IdSegment(val, 1, bizName);
+        } catch (Exception e) {
+            log.error("[IdUtils] DB降级分配失败 | bizName={}", bizName, e);
+            throw new RuntimeException("ID生成失败，请检查数据库连接", e);
+        }
+    }
+
+    /**
+     * 清理过期的内存号段（防止内存泄露）
+     * <p>
+     * 对于按天重置的场景（bizName包含日期），需要定期清理历史日期的号段数据。
+     * 当缓存大小超过50个条目时触发清理，保留当天的号段，删除历史日期的号段。
+     * </p>
+     *
+     * @param todayStr 今天的日期字符串（yyyyMMdd格式）
+     */
+    private void cleanExpiredSegments(String todayStr) {
+        // 当缓存过大时触发清理（阈值：50个条目）
+        if (segmentCache.size() > 50) {
+            int beforeSize = segmentCache.size();
+            
+            // 移除所有包含":"且不以后缀为今天日期的key（即历史日期的号段）
+            segmentCache.keySet().removeIf(key -> key.contains(":") && !key.endsWith(todayStr));
+            
+            int afterSize = segmentCache.size();
+            int removedCount = beforeSize - afterSize;
+            
+            if (removedCount > 0) {
+                log.info("[IdUtils] 清理过期内存号段 | todayStr={}, beforeSize={}, afterSize={}, removedCount={}", 
+                        todayStr, beforeSize, afterSize, removedCount);
             }
         }
     }
